--- a/index.html
+++ b/index.html
@@ -110,8 +110,10 @@
             </li>
           </ul>
         </section>
+        <footer class="footer">
+          <p class="footer__text">2023 © Spots</p>
+        </footer>
       </main>
-      <footer class="footer"></footer>
     </div>
   </body>
 </html>
