--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
   </head>
   <body>
     <div class="page">
-      <div class="page__section">
+      <div class="page__content">
         <header class="header">
           <img src="./images/logo.svg" alt="Spot logo" class="header__logo" />
         </header>
         <main class="content">
-          <section class="profile">
+          <section class="profile page__section">
             <img
               src="./images/avatar.jpg"
               alt="avatar photo"
