--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
           <footer class="footer">
             <p class="footer__text">2025 © Spots</p>
           </footer>
-          <div class="modal modal_is-opened">
+          <div class="modal">
             <div class="modal__container">
               <button type="button" class="modal__close-btn">X</button>
               <h2 class="modal__title">Edit Profile</h2>
@@ -141,7 +141,7 @@
               </form>
             </div>
           </div>
-          <div class="modal modal_is-opened">
+          <div class="modal">
             <div class="modal__container">
               <button type="button" class="modal__close-btn">X</button>
               <h2 class="modal__title">New Post</h2>
