Figma styling update

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
           </footer>
           <div class="modal" id="edit-profile-modal">
             <div class="modal__container">
-              <button type="button" class="modal__close-btn">X</button>
+              <button type="button" class="modal__close-btn"><img src="./images/close.svg" alt="Close" /></button>
               <h2 class="modal__title">Edit Profile</h2>
               <form class="modal__form">
                 <label for="profile-name-input" class="modal__label"
@@ -126,6 +126,7 @@
                     type="text"
                     class="modal__input"
                     placeholder="Type your name"
+                    required
                   />
                 </label>
                 <label for="profile-description-input" class="modal__label"
@@ -135,6 +136,7 @@
                     type="text"
                     class="modal__input"
                     placeholder="Describe yourself"
+                    required
                   />
                 </label>
                 <button type="submit" class="modal__submit-btn">Save</button>
@@ -143,7 +145,7 @@
           </div>
           <div class="modal" id="new-post-modal">
             <div class="modal__container">
-              <button type="button" class="modal__close-btn">X</button>
+              <button type="button" class="modal__close-btn"><img src="./images/close.svg" alt="Close" /></button>
               <h2 class="modal__title">New Post</h2>
               <form class="modal__form">
                 <label for="card-image-input" class="modal__label"
@@ -153,6 +155,7 @@
                     type="url"
                     class="modal__input"
                     placeholder="Paste a link to the picture"
+                    required
                   />
                 </label>
                 <label for="post-caption-input" class="modal__label"
@@ -162,6 +165,7 @@
                     type="text"
                     class="modal__input"
                     placeholder="Type your caption"
+                    required
                   />
                 </label>
                 <button type="submit" class="modal__submit-btn">Save</button>
