--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
               <button type="button" class="modal__close-btn">
                 <img src="./images/close.svg" alt="Close" />
               </button>
-              <img class="modal__preview-image" src="" alt="" />
+              <img class="modal__preview-image" src="#" alt="" />
               <h2 class="modal__preview-caption"></h2>
             </div>
           </div>
