modal caption update

--- a/index.html
+++ b/index.html
@@ -114,15 +114,16 @@
               </form>
             </div>
           </div>
-          <div class="modal" id="preview-image-modal">
-            <div class="modal__container">
-              <button type="button" class="modal__close-btn">
-                <img src="./images/close.svg" alt="Close" />
-              </button>
-              <img class="modal__preview-image" src="#" alt="" />
-              <h2 class="modal__preview-caption"></h2>
-            </div>
-          </div>
+        <div class="modal modal_type_preview" id="preview-image-modal">
+    <div class="modal__preview-container">
+      <img class="modal__preview-image" src="#" alt="" />
+      <h2 class="modal__preview-caption"></h2>
+    </div>
+    <button type="button" class="modal__close-btn modal__close-btn_type_preview">
+      <img src="./images/close.svg" alt="Close" />
+    </button>
+  </div>
+  </div>
         </main>
       </div>
     </div>
